@@ -1,3 +1,8 @@
+Mon Dec 20 21:22:57 CET 2010
+	Added macro MHD_LONG_LONG to allow change of MHD's "long long" use
+	to some other type on platforms that do not support "long long"
+	(Mantis #1631). -CG/bplant
+
 Sun Dec 19 19:54:15 CET 2010
 	Added 'MHD_create_response_from_fd_at_offset'. -CG
 
